--- a/index.html
+++ b/index.html
@@ -6,8 +6,33 @@
         <title>sparseinference</title>
         <meta name="description" content="Software For A Competitive Advantage">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <style>
+                body {
+                    background-image: url("./static/IMG_2375_small.JPG");
+                    background-repeat: no-repeat;
+                    background-position: top;
+                    margin-right: 10px;
+                    background-size: 100%;
+                }
+        </style>
     </head>
     <body>
-        <h2>Embedded Systems, Machine Vision and Trading Automation, in Grand Bend Canada</h2>
+        <h1>Software for Embedded Systems, Machine Vision and Trading Automation</h1>
+        <h1>Software for:</h1>
+        <ul>
+            <li><h2>Embedded Systems</h2></li>
+            <li><h2>Machine Learning</h2></li>
+            <li><h2>Trading Automation</h2></li>
+        </ul>
+        <h1>in Grand Bend, Canada</h1>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <p>Contact:
+           <a href="mailto:peter@sparseinference.com">peter@sparseinference.com</a>
+        </p>
     </body>
 </html>
