--- a/index.html
+++ b/index.html
@@ -17,19 +17,15 @@
         </style>
     </head>
     <body>
-        <h1>Software for:</h1>
+        <h1 align="center">Software For A Competitive Advantage</h1>
+        <br>
         <ul>
             <li><h2>Embedded Systems</h2></li>
             <li><h2>Machine Learning</h2></li>
             <li><h2>Trading Automation</h2></li>
         </ul>
-        <h1>in Grand Bend, Canada</h1>
         <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
+        <h3>Grand Bend, Canada</h3>
         <p>Contact:
            <a href="mailto:peter@sparseinference.com">peter@sparseinference.com</a>
         </p>
