--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <h3>Grand Bend, Canada</h3>
         <p>Contact:
            <a href="mailto:peter@sparseinference.com">peter@sparseinference.com</a>
+           <a href="https://github.com/sparseinference">https://github.com/sparseinference</a>
         </p>
     </body>
 </html>
